# php-win-installer

./: .gitignore  Cargo.toml
src/: arch.rs  config.rs  config_repository.rs  lock_file.rs  main.rs  version.rs  version_manager.rs  win_php_client.rs  win_php_domain.rs  zip.rs
