[package]
name = "php-win-installer"
description = "A tool for installing multiple PHP versions in Windows"
version = "0.1.0"
authors = ["Christoffer Lindahl Hassel"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
dialoguer = "0.10.4"
home = "0.5.4"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.7.3"
