[package]
name = "php-win-installer"
description = "A tool for installing multiple PHP versions in Windows"
version = "0.1.0"
authors = ["Christoffer Lindahl Hassel"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
dialoguer = "0.10.4"
home = "0.5.4"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.96"
stderrlog = "0.5.4"
toml = "0.7.3"
zip = "0.6.5"
